@@ -69,6 +69,7 @@ Template for new versions:
 - `lever`: enable use of ``reqscript`` to access lever pulling functions.
 - `exterminate`: add ``all`` target for convenient scorched earth tactics
 - `caravan`: add shortcut to the trade request screen for selecting item types by value
+- `gui/notify`: notification panel extended to apply to adventure mode
 
 ## Removed
 - `max-wave`: merged into `pop-control`
